# perfetto

_temp/: args.gn
gn/standalone/: BUILD.gn
