is_debug = false
target_ar=getenv("AR")
target_cc=getenv("CC")
target_cxx=getenv("CXX")
target_ld=getenv("LD")
#target_sysroot="/hdd/LGE/build-webos/BUILD/work/raspberrypi4-webos-linux-gnueabi/webos-image/1.0-r3/rootfs"
target_sysroot=getenv("SDKTARGETSYSROOT")
target_cpu="arm"
arm_arch="armv7ve"
arm_version=7
arm_float_abi="hard"
is_cross_linux_build=true
is_clang=false
